Update readme with page breaks

--- a/docs/readme/readme.adoc
+++ b/docs/readme/readme.adoc
@@ -20,7 +20,7 @@
 
 .Board overview
 image::tiva-board.png[Tiva board, width=600, align="center"]
-
+<<<
 * Logic analyzer: https://www.emag.ro/analizor-logic-saleae-cu-8-canale-elektroweb-24-mhz-1-w-005/pd/D3QC35MBM/?ref=history-shopping_323810473_116388_1[Cheap Saleae logic analyzer]
 
 .Logic analyzer
@@ -31,30 +31,30 @@ image::logic-analyzer.png[Logic analyzer, width=300, align="center"]
 .Packages
 ----
 ./
-|-- lib/TivaWare/              - firmware provided by board manufacturer
++-- lib/TivaWare/ --------------- firmware provided by board manufacturer
 +-- src/
-    |-- app/                   - package containing apps
-    |   |-- blinky
-    |   |-- buttons
+    +-- app/ -------------------- package containing apps
+    |   +-- blinky
+    |   +-- buttons
     |   +-- time_bomb
-    |-- board_support/         - startup code
-    |-- hw_abstraction/        - abstraction layer over firmware
-    |-- system_infrastructure/ - kernel configuration, interrupt impl and app init
-    |   +-- events/            - events setup
-    |-- utils/                 - general useful stuff
-    +-- very_simple_kernel/    - a simple non-preemptive kernel
+    +-- board_support/ ---------- startup code
+    +-- hw_abstraction/ --------- abstraction layer over firmware
+    +-- system_infrastructure/ -- kernel configuration, interrupt impl and app init
+    |   +-- events/ ------------- events setup
+    +-- utils/ ------------------ general useful stuff
+    +-- very_simple_kernel/ ----- a simple non-preemptive kernel
 ----
 
 .Namespaces
-In C, namespaces are not a native language feature. However, one way to emulate namespaces in C is by using prefixes. In this project all identifiers (type names, function names etc.) are prefixed with the abbreviation of the package. Example for Task function in very_simple_kernel package:
+In C, namespaces are not a native language feature. However, one way to emulate namespaces in C is by using prefixes. In this project all identifiers (type names, function names etc.) are prefixed with the abbreviation of the package. Example for Task function in `very_simple_kernel` package:
 ----
-+++------------- package abbreviation
-||| ++++-------- class name
-||| |||| +++---- method name
++++----------- package/namespace abbreviation
+||| ++++------ class name
+||| |||| +++-- method name
 ||| |||| |||
 vsk_Task_run
 ----
-
+<<<
 == Very simple kernel (vsk)
 
 VSK is a non-preemptive, run to completion, event driven kernel.
@@ -93,10 +93,10 @@ vsk_Timer .u.> vsk_TimerSupervisor : "registers self to        "
 vsk_TimerSupervisor o-d-> "0..*" vsk_Timer : "manages list of"
 vsk_Timer .l.> vsk_Time : "uses"
 ----
-
+<<<
 == Active object
 
 An active object is an event-driven, encapsulated software object running in its own thread/task and communicating asynchronously by means of events.
 
 .Active object
-image::active-object.png[Active object, width=500, align="center"]
+image::active-object.png[Active object, width=400, align="center"]
