--- a/docs/readme/readme.adoc
+++ b/docs/readme/readme.adoc
@@ -20,6 +20,7 @@
 
 .Board overview
 image::tiva-board.png[Tiva board, width=600, align="center"]
+
 <<<
 * Logic analyzer: https://www.emag.ro/analizor-logic-saleae-cu-8-canale-elektroweb-24-mhz-1-w-005/pd/D3QC35MBM/?ref=history-shopping_323810473_116388_1[Cheap Saleae logic analyzer]
 
@@ -54,6 +55,41 @@ In C, namespaces are not a native language feature. However, one way to emulate 
 ||| |||| |||
 vsk_Task_run
 ----
+
+<<<
+== Key concept: Active object
+
+An active object is an event-driven, encapsulated software object running in its own thread/task and communicating asynchronously by means of events. These events are added to a queue or a message passing mechanism that the active object processes sequentially. This decouples the sender and receiver, allowing for non-blocking communication. When an event is received, the active object processes it in its own time, and the sender does not need to wait for an immediate response. This is especially valuable in scenarios where certain operations might take a significant amount of time to complete. They are particularly useful in systems where multiple tasks need to be performed concurrently, and a structured approach to handling asynchronous events is required to ensure modularity and maintainability in the codebase.
+
+.Active object
+image::active-object.png[Active object, width=400, align="center"]
+
+Active objects are designed to operate independently and do not need to have direct knowledge of or dependencies on other active objects. Instead, they communicate by raising and handling events. Here's how this decoupled communication works:
+
+.Event-Driven Communication:
+Each active object is responsible for its own functionality. It operates autonomously, responding to events as they occur. Events are specific occurrences or notifications that indicate something has happened, such as a sensor reading, a user input, or a system state change.
+
+.Event Raising:
+When an active object needs to inform the system about an event or state change, it raises an event. The event can carry relevant data, providing context about what occurred.
+
+.Event Handling:
+Other active objects within the system can subscribe to specific types of events. Subscribing means they express interest in receiving notifications about particular types of events. Active objects may specify event handlers or callback functions to execute when a subscribed event occurs.
+
+.Decoupled Communication:
+Importantly, active objects don't need to know which other active objects are interested in their events. They only need to raise the event when the relevant condition occurs. The event manager or takes care of delivering the event to the appropriate subscribers.
+
+.Flexibility and Extensibility:
+This approach makes the system more flexible and extensible. New active objects can be added to the system without requiring modifications to existing ones. They can subscribe to relevant events to participate in the system's behavior without directly coupling themselves to the existing active objects.
+
+.Isolation and Encapsulation:
+Active objects remain encapsulated and isolated from one another. They don't need to expose their internal details or tightly couple with other objects. This isolation simplifies debugging, testing, and maintenance.
+
+.Scalability:
+The event-driven, decoupled architecture also makes the system more scalable. As new features or components are added, they can interact with existing components through events, maintaining a clean and modular architecture.
+
+.Reduced Complexity:
+In complex software systems, the decoupled communication model reduces the complexity of managing inter-object dependencies. Active objects can focus on their core responsibilities, making the system more comprehensible and maintainable.
+
 <<<
 == Very simple kernel (vsk)
 
@@ -62,15 +98,23 @@ It is a framework for managing tasks, states, and events within an application.
 
 The following diagram represents an overview of the kernel, showing how different elements interact in a high-level view.
 
-[plantuml, target=diag-vsk-overview]
+[plantuml, target=diag-vsk-overview, align="center"]
 .VSK overview
 ----
-App -d--|> vsk_ActiveObject
-App .r.> AppState : "delegates behavior to"
-AppState -d-|> vsk_State
-AppState1 -d-|> AppState
-AppState2 -d-|> AppState
-AppStateN -d-|> AppState
+class vsk_StateContext
+class vsk_State
+class vsk_ActiveObject
+class vsk_Task
+class vsk_TaskScheduler << (S,coral) >>
+class vsk_Inbox
+class vsk_Message
+class vsk_EventSubscription
+class vsk_Event
+class vsk_OnStartEvent << (S,coral) >>
+class vsk_EventTimer
+class vsk_TaskScheduler << (S,coral) >>
+class vsk_Timer
+class vsk_TimerSupervisor << (S,coral) >>
 vsk_StateContext o-r-> vsk_State : "holds the current"
 vsk_State o-l-> vsk_StateContext : "is associated with"
 vsk_ActiveObject -u-|> vsk_StateContext
@@ -82,7 +126,7 @@ vsk_Task .u.> vsk_TaskScheduler : "registers self to    "
 vsk_TaskScheduler o-d-> "0..*" vsk_Task : "manages list of    "
 vsk_Inbox o-u-> vsk_Task : "is associated with / \l activates"
 vsk_Inbox o-d-> "0..*" vsk_Message : "manages list of"
-vsk_EventSubscription o-l-> vsk_Inbox : "is associated with / \l posts message to"
+vsk_EventSubscription o-l-> vsk_Inbox : "             is associated with / \l              posts message to"
 vsk_EventSubscription *-d-> vsk_Message : "has"
 vsk_Event o-l-> "0..*" vsk_EventSubscription : "manages list of"
 vsk_OnStartEvent -d-|> vsk_Event
@@ -93,10 +137,44 @@ vsk_Timer .u.> vsk_TimerSupervisor : "registers self to        "
 vsk_TimerSupervisor o-d-> "0..*" vsk_Timer : "manages list of"
 vsk_Timer .l.> vsk_Time : "uses"
 ----
+
 <<<
-== Active object
+== Creating a VSK app
 
-An active object is an event-driven, encapsulated software object running in its own thread/task and communicating asynchronously by means of events.
+Creating an app using VSK can be done in 2 ways:
 
-.Active object
-image::active-object.png[Active object, width=400, align="center"]
+.Classical approach using tasks
+Create the needed tasks and run the app functions in the task operations. Tasks in VSK are one shot run to completion operations. In order to run them several times they need to be activated using the `vsk_Task_activate` method. To run them cyclically they need to be paired with a periodic timer which will activate the task in its callback function.
+
+.Modern approach using active objects
+Create the needed active objects by extending `vsk_ActiveObject` class. If a state machine is necessary, create the needed states by extending `vsk_State` class and link them to the active object. Create the needed event subscriptions and provide the handlers for the events. Perform the needed functionality in the handlers.
+
+The following diagram shows how to extend the active object class.
+
+[plantuml, target=diag-extending-active-object, width=400, align="center"]
+.Extending active object
+----
+class App << (S,coral) >>
+class AppState
+class AppState1
+class AppState11 << (S,coral) >>
+class AppState12 << (S,coral) >>
+class AppState2 << (S,coral) >>
+class vsk_ActiveObject
+class vsk_StateContext
+class vsk_State
+App -d-|> vsk_ActiveObject
+App *-d-> "1..*" vsk_EventSubscription : "has"
+App .r.> AppState : "delegates behavior to"
+App .u.> AppState2 : "initializes"
+App .u.> AppState11 : "initializes"
+App .u.> AppState12 : "initializes"
+AppState -d--|> vsk_State
+AppState1 -d-|> AppState
+AppState11 -d-|> AppState1
+AppState12 -d-|> AppState1
+AppState2 -d-|> AppState
+vsk_ActiveObject -d-|> vsk_StateContext
+vsk_StateContext o-r-> vsk_State : "holds the current"
+vsk_State o-l-> vsk_StateContext : "is associated with"
+----
